Revert "edit typro and apply to show text detail"
This reverts commit c6cf950404ec6f8cdeb2dbdde8c7d775c97f9421.

--- a/src/app/table-list/table-list.component.css
+++ b/src/app/table-list/table-list.component.css
@@ -12,45 +12,32 @@
 width: 180px;
 }
 .card-body{
-  font-weight: 400;
+  font-weight: 100;
   border: none;
-  font-family:"Sarabun", sans-serif;
-  font-style: normal;
-  font-size: 16px;
+  font-family: 'TH SarabunPSK', sans-serif; 
 }
 .card-body tbody{
   font-size: 14px;
 }
 
 .searchLocation{
-  /* color: #343dff; */
-  /* background-color: transparent; */
-  /* border: 0.5px solid rgb(0, 0, 0); */
-  /* border-radius: 3px;
+  color: #343dff;
+  background-color: transparent;
+  border: 0.5px solid rgb(0, 0, 0);
+  border-radius: 3px;
   padding: 4px 8px;
   font-size: 14px;
   font-weight: 500;
   line-height: 1.333em;
-  display: inline-block; */
-  color: #ff5a65;
-  background-color: #ffeff0;
-  border: 0.5px solid rgba(0, 0, 0, 0);
-  border-radius: 32px;
-  /* border-radius: 3px; */
-  padding: 4px 8px;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.333em;
   display: inline-block;
   align-items: center;
-  font-weight: 400;
-  font-family: "Sarabun", sans-serif;
+  font-family: 'TH SarabunPSK', sans-serif; 
  
 }
-/* .searchLocation:hover{
+.searchLocation:hover{
   background: #dddfff;
   z-index: 30;
-} */
+}
 
 .modal-body-detail{ 
   position: relative;
@@ -73,7 +60,7 @@ width: 180px;
   left: 50%;
   transform: translateX(-50%);
   justify-content: center;
-  font-family: "Sarabun", sans-serif;
+  font-family: 'TH SarabunPSK', sans-serif;
   
 }
 .card-header{
@@ -145,7 +132,7 @@ border-bottom: 1px solid #c1c1c1;
 }
 .headerText button:first-child {
   display: flex;
-  font-family: "Sarabun", sans-serif;
+  font-family: 'TH SarabunPSK', sans-serif;
   
   height: 35px;
   width: auto;
@@ -179,21 +166,6 @@ height: 25px;
 background: #e2e2e2;
 border-radius: 5px;
 }
-
-
-.FontSizeBox{
-  position: relative;
-  display: flex;
-  margin-top: 8.5px;
-  align-items: center;
-  text-align: center;
-  border-radius: 5px;
-  height: 20px;
-  width: 60px;
-  font-family: "Sarabun", sans-serif;
-
-}
-/*/////////////////////////////////////*/
 .writteDraw{
 margin: 20px 0 20px 0;
 width: 827px;
@@ -327,14 +299,6 @@ position: absolute;
   top: 0;
   left: 0;
 }
-
-.page{
-  width: 100%;
-  min-height: 297mm;
-  page-break-after: always;
-  page-break-inside: avoid;
-  margin: 10mm 0;
-}
 /* .right-panelOnBottom{
 position: relative;
 bottom: 0;
@@ -382,22 +346,17 @@ right: 25px;
     position: relative;
     border-collapse: collapse; /* เพื่อทำให้เส้นขอบรวมกัน */
     width: 600px;
-    height: auto;
     overflow: auto;
     padding: 20px; /* เพิ่มระยะห่างบนและล่าง */
-    font-family: "Sarabun", sans-serif; /* 'TH SarabunPSK', sans-serif;ใช้ฟอนต์ราชการ */
-    border: 0.5 solid black;
+    font-family: 'TH SarabunPSK', sans-serif; /* ใช้ฟอนต์ราชการ */
   }
 .main-detail table{
     max-width: 600px;
-    max-height:700px;
     table-layout: fixed;
     overflow: auto;
-    
   }
 .main-detail th, .main-detail td {
     max-width: 539.29px;
-    max-height:700px;
     border: 1px solid black; /* เส้นขอบสีดำ */
     padding: 5px; /* ระยะห่างภายในเซลล์ */
     text-align: left; /* จัดตำแหน่งเนื้อหาให้อยู่ทางซ้าย */
@@ -449,10 +408,10 @@ right: 25px;
   }
 .border-error {
     position: absolute;
-    bottom:-10px;  /* ให้ข้อความอยู่ใต้ input */
-    left: 0px;
+    top:15px;  /* ให้ข้อความอยู่ใต้ input */
+    left: 350px;
     margin: 2px;
-    background-color: transparent;
+    background-color: white;
     color: red;
     font-size: 0.875em;
     text-align: left;
@@ -485,10 +444,10 @@ right: 25px;
   }
 .border-errorPersonFullname{
     position: absolute;
-    bottom:-10px;  /* ให้ข้อความอยู่ใต้ input */
-    left: 0px;
+    top:-15px;  /* ให้ข้อความอยู่ใต้ input */
+    left: 150px;
     margin: 2px;
-    background-color: transparent;
+    background-color: rgb(255, 255, 255);
     color: red;
     font-size: 0.875em;
     text-align: left;
@@ -497,11 +456,11 @@ right: 25px;
   }
 .border-errorPersonRank{
     position: absolute;
-    bottom:-10px;  /* ให้ข้อความอยู่ใต้ input */
-    left:0px;
+    top:-15px;  /* ให้ข้อความอยู่ใต้ input */
+    left: 30px;
     margin: 2px;
     width: auto;
-    background-color: transparent;
+    background-color: rgb(255, 255, 255);
     color: red;
     font-size: 0.875em;
     text-align: left;
@@ -511,8 +470,8 @@ right: 25px;
 
 .border-errorLocation {
     position: absolute;
-    bottom:-10px;  /* ให้ข้อความอยู่ใต้ input */
-    left: 0px;
+    top:10px;  /* ให้ข้อความอยู่ใต้ input */
+    left: 350px;
     margin: 2px;
     /* background-color: white; */
     color: red;
@@ -576,9 +535,8 @@ right: 25px;
       color: #000000;
       background-color:white ;/*rgb(255, 219, 61)*/
       border: 0 solid #dee2e6;
-      font-family: "Sarabun", sans-serif;
+      font-family: 'TH SarabunPSK', sans-serif;
       opacity: 0.9;
-      border-radius: 2px ;
 
   }
   :host ::ng-deep .page-link:hover{
@@ -591,7 +549,7 @@ right: 25px;
       background-color: rgb(255, 219, 61);
       border: 0 solid #dee2e6;
       box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 244, 54, 0.4);
-      font-family: "Sarabun", sans-serif;
+      font-family: 'TH SarabunPSK', sans-serif;
       opacity: 1;
   }
 
