--- a/documentation/css/material-dashboard.css
+++ b/documentation/css/material-dashboard.css
@@ -3860,9 +3860,7 @@ tbody.collapse.show {
   padding: 1.25rem; }
 
 .card-title {
-  margin-bottom: 0.75rem;
-  font-family: "Sarabun", sans-serif;
- }
+  margin-bottom: 0.75rem; }
 
 .card-subtitle {
   margin-top: -0.375rem;
