--- a/src/app/table-list/table-list.component.css
+++ b/src/app/table-list/table-list.component.css
@@ -516,14 +516,14 @@ right: 25px;
     color: #fff;
     background-color: #0d6efd;/*#000dc2ef*/
     border-color: #00087c9f;
-    /* box-shadow: 0 2px 2px 0 #0d6efd, 0 3px 1px -2px #0d6efd, 0 1px 5px 0 #0d6efd; */
+    box-shadow: 0 2px 2px 0 #0d6efd, 0 3px 1px -2px #0d6efd, 0 1px 5px 0 #0d6efd;
     font-family: "Sarabun", sans-serif;
 
   }
   :host ::ng-deep .btn-add:hover{
     background-color: #0d6efd; 
     border-color: #00087c9f;
-    box-shadow: 0 14px 14px -12px #0d6dfd93, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #0d6dfd93;
+    /* box-shadow: 0 14px 14px -12px #0d6dfd93, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #0d6dfd93; */
   }
  
  
