--- a/src/assets/scss/core/_misc.scss
+++ b/src/assets/scss/core/_misc.scss
@@ -44,7 +44,7 @@ a{
 label{
     font-size: 14px;
     line-height: 1.42857;
-    color: $checkboxes-text-color;
+    color: black;/*$checkboxes-text-color*/
     font-weight: 400;
 }
 
