--- a/src/assets/scss/core/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/core/_sidebar-and-main-panel.scss
@@ -193,6 +193,7 @@
             display: block;
             height: auto;
             white-space: nowrap;
+            font-family: 'Sarabun',sans-serif;
         }
 
         i{
