--- a/src/assets/scss/core/_cards.scss
+++ b/src/assets/scss/core/_cards.scss
@@ -100,6 +100,7 @@
       background: transparent;
         .title{
             color: $white-color;
+            font-family: 'Sarabun',sans-serif;
         }
 
         &:not([class*="card-header-"]){
@@ -491,6 +492,7 @@
       }
 
       &:not(.card-header-icon):not(.card-header-text):not(.card-header-image){
+        font-family: 'Sarabun',sans-serif;
         border-radius: $border-radius-base;
         margin-top: -20px;
         padding: 15px;
