17//06 it just finished by me 98%

--- a/src/app/table-list/table-list.component.css
+++ b/src/app/table-list/table-list.component.css
@@ -2,9 +2,10 @@
   max-width: 100%;
 }
 
-.card-header .card-header-danger .modal-title{
+:host ::ng-deep .card-header .card-header-danger .modal-title{
   font-family: "Sarabun", sans-serif !important; 
 }
+
 .modal-body {
   display: flex;
   justify-content: center;
@@ -52,7 +53,8 @@ width: 180px;
    left: 50%;
    transform: translateX(-50%);
     width: 100%;
-    border: 1px solid #000;
+    height: 297mm;
+    border: 0.2px solid #000;
     font-family: "Sarabun", sans-serif;
     max-height:297mm ;
     /* overflow: auto;   */
@@ -147,6 +149,17 @@ border-bottom: 1px solid #c1c1c1;
   
   height: 35px;
   width: auto;
+  border-right: 1px solid #c1c1c1;
+}
+.FontSizeBox{
+  margin-left: 10px;
+  margin-top:5px ;
+display: flex;
+align-items: center;
+justify-content: center;
+  border-radius: 5px;
+  width: 30px;
+  height: 25px;
 }
 /* .headerText button:first-child:hover {
 display: flex;
@@ -165,6 +178,7 @@ width: 65px;
   width: 35px;
   height: 35px;
   border: none;
+  margin-left: 10px;
   
   
 }
@@ -520,7 +534,7 @@ right: 25px;
   :host ::ng-deep .btn-add:hover{
     background-color: #24a0ed; 
     border-color: #00087c9f;
-    /* box-shadow: 0 14px 14px -12px #0d6dfd93, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #0d6dfd93; */
+    /* box-shadow: 0 14px 14px -12px #24a0ed51, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #24a0ed51; */
   }
  
  
@@ -598,6 +612,9 @@ right: 25px;
 }
 
 @media print {
+  #myDetail{
+    border: none;
+  }
   .main-detail {
     width: 100%;
     page-break-inside: avoid;
