--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -114,7 +114,7 @@
 
                   <div class="row">
                     <div class="col-sm">
-                      <h5 class="modal-title" id="addItemModalLabel" style="color: white;">เพิ่มรายการ</h5>
+                      <h5 class="modal-title" id="addItemModalLabel" style="color: white; font-family: 'Sarabun', sans-serif !important;">เพิ่มรายการ</h5>
                     </div>
                     <div class="col-sm">
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -286,6 +286,21 @@
                           *ngIf="addItemForm.controls['detail'].invalid && (addItemForm.controls['detail'].touched || addItemForm.controls['topic'].dirty || Submitted)">กรุณากรอกข้อมูล</span>
                       </div>
                     </div>
+
+                    <div class="form-group">
+                      <label for="place">รายละเอียดสถานที่
+                        <span
+                          *ngIf="addItemForm.controls['place'].invalid && (addItemForm.controls['place'].touched || addItemForm.controls['place'].dirty || Submitted)"
+                          class="text-validate">*</span></label>
+                      <input type="text" id="place" formControlName="place" class="form-control"
+                        placeholder="รายละเอียดสถานที่"
+                        [ngClass]="{'box-validate': addItemForm.controls['place'].invalid && (addItemForm.controls['place'].touched || addItemForm.controls['place'].dirty || Submitted)}" />
+                      <div class="text-validate"
+                        *ngIf="addItemForm.controls['place'].invalid &&(addItemForm.controls['place'].touched || addItemForm.controls['place'].dirty || Submitted ) ">
+                        <span class="border-error"
+                          *ngIf="addItemForm.controls['place'].invalid && (addItemForm.controls['place'].touched || addItemForm.controls['topic'].dirty || Submitted)">กรุณากรอกข้อมูล</span>
+                      </div>
+                    </div>
                     <div class="form-group">
                       <label for="location">สถานที่
                         <span
@@ -324,7 +339,7 @@
             <div class="modal-dialog modal-lg" role="document">
               <div class="modal-content" [ngStyle]="{ width: '230mm', height: '327mm' }">
                 <div class="modal-header card-header card-header-danger" style="background: rgb(255, 209, 0)">
-                  <h5 class="modal-title" id="myModalLabel" style="color: white;">รายละเอียด</h5>
+                  <h5 class="modal-title" id="myModalLabel" style="color: white; font-family: 'Sarabun', sans-serif !important; ">รายละเอียด</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
@@ -358,8 +373,8 @@
                           <p>{{ detailItems?.record_detail }}</p>
                         </div>
                         <div class="form-group">
-                          <label>สถานที่</label>
-                          <p>{{ detailItems?.record_location }}</p>
+                          <label>สถานที่:</label>
+                          <p>{{ detailItems?.record_place }}</p>
                         </div>
                       </div>
                       <div class="main-detail">
@@ -373,7 +388,7 @@
                           </thead>
                           <tbody>
                             <tr>
-                              <td>{{detailItems?.record_id}}/{{detailItems?.record_star_date | thaidate :'year'}}</td>
+                              <td style="vertical-align: text-top;">{{detailItems?.record_id}}/{{detailItems?.record_star_date | thaidate :'year'}}</td>
                               <td [innerHTML]="getSafeHtml(detailItems?.record_content)"></td>
                             </tr>
                           </tbody>
@@ -456,7 +471,7 @@
             <div class="modal-dialog modal-lg" role="document">
               <div class="modal-content" [ngStyle]="{width: '230mm',height: '180mm'  }">
                 <div class="modal-header card-header card-header-danger" style="background: rgb(255, 209, 0)">
-                  <h5 style="color: white;" class="modal-title" id="myModalLabel">จดบันทึก</h5>
+                  <h5 style="color: white; font-family: 'Sarabun', sans-serif !important;" class="modal-title" id="myModalLabel">จดบันทึก</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
@@ -488,7 +503,7 @@
                               <option value="1">8</option>
                               <option value="2">10</option>
                               <option value="3">12</option>
-                              <option value="4" selected>14</option>
+                              <option value="4" selected >14</option>
                               <option value="5">18</option>
                               <option value="6">24</option>
                               <option value="7">36</option>
