--- a/src/app/table-list/table-list.component.css
+++ b/src/app/table-list/table-list.component.css
@@ -474,7 +474,7 @@ right: 25px;
     bottom:-15px;  /* ให้ข้อความอยู่ใต้ input */
     left: 0px;
     margin: 2px;
-    background-color: rgb(255, 255, 255);
+    background-color: transparent;
     color: red;
     font-size: 0.875em;
     text-align: left;
@@ -526,15 +526,15 @@ right: 25px;
 }
   :host ::ng-deep .btn-add{
     color: #fff;
-    background-color: #24a0ed;/*#000dc2ef  */
+    background-color: rgb(24,144,255) ;/*#000dc2ef rgb(24,144,255)  #24a0ed */
     border-color: #00087c9f;
-    box-shadow: 0 2px 2px 0 #0d6efd, 0 3px 1px -2px #0d6efd, 0 1px 5px 0 #0d6efd;
+    /* box-shadow: 0 2px 2px 0 #0d6efd, 0 3px 1px -2px #0d6efd, 0 1px 5px 0 #0d6efd; */
 
   }
   :host ::ng-deep .btn-add:hover{
-    background-color: #24a0ed; 
-    border-color: #00087c9f;
-    /* box-shadow: 0 14px 14px -12px #24a0ed51, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #24a0ed51; */
+    background-color: rgb(24,144,255); 
+    border-color: #24a0edb6;
+    box-shadow: 0 14px 14px -12px #24a0ed51, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #24a0ed51;
   }
  
  
