--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 
-<router-outlet></router-outlet>
+<router-outlet>
+  
+</router-outlet>
 <!-- <ngx-extended-pdf-viewer [src]="'assets/pdf/การลงตรวจสอบ (1).pdf' " useBrowserLocale="true"
 height="80vh"
 [showSidebarButton]="false"
