--- a/src/app/view/table-detail/table-detail.component.css
+++ b/src/app/view/table-detail/table-detail.component.css
@@ -24,21 +24,6 @@
     font-size: 14px;
   }
   
-  .searchLocation{
-    color: #ff9e2c;
-    border: 0px solid transparent;
-    background-color: #fff3e4;
-    border-radius: 32px;
-    padding: 4px 8px;
-    font-size: 12px;
-    font-weight: 300;
-    line-height: 1.333em;
-    display: inline-block;
-    align-items: center;
-    font-size: 14px;
-    font-family:  'Sarabun', sans-serif; 
-   
-  }
   /* .searchLocation:hover{
     background: #dddfff;
     z-index: 30;
@@ -53,41 +38,45 @@
      left: 50%;
      transform: translateX(-50%);
       width: 100%;
-      height: 297mm;
+      height: auto;/*297mm*/
       border: 0.2px solid #000;
       font-family: "Sarabun", sans-serif;
+      
       max-height:297mm ;
       /* overflow: auto;   */
   }
   
-  .modal-content{
-  
-    max-height: 1235.9px;
+  .MainTableDetail{
+    height: 100%;
+
+  }
+  .Detail-content{
+    position: relative;
+    /* max-height: 1235.9px; */
+    height: auto;
+    margin: 50px 0 50px 0;
     left: 50%;
     transform: translateX(-50%);
     justify-content: center;
     font-family: "Sarabun", sans-serif;
+    background: white;
     
   }
   .card-header{
     position: relative;
     background-color: rgb(255, 209, 0);
+    width: 836.3px;
+    border-radius: 3px;
+    top: -20px;
+    margin-top: -20px;
+    padding: 15px;
+    left: 50%;
+    transform: translate(-50%);
+    justify-content: center;
+    box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 67, 54, 0.4);
   }
-  .search-table{
-    position: relative;
-    align-items:center ;
-  }
-  .icon-search{
-    background-color: #fff;
-    width: 35px;
-    height: 35px;
-    border-radius: 20.5px;
-    align-items: center;
-    border: none;
-  }
-  .icon-search:hover{
-    box-shadow:0 10px 10px 0 #b5b3b3;
-  }
+
+  
   
   
   label{
@@ -161,15 +150,7 @@
     width: 30px;
     height: 25px;
   }
-  /* .headerText button:first-child:hover {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #e2e2e2;
-  border-radius: 5px;
-  height: 30px;
-  width: 65px;
-  } */
+  
   .headerText button{
     display: flex;
     align-items: center;
@@ -298,7 +279,8 @@
     background: #fff;
     padding: 96px;
     height: 100%;
-    max-height: 297mm;
+    border:none;
+    /* max-height: 297mm; */
   }
   .header-topic{
   position: relative;
@@ -326,21 +308,7 @@
     top: 0;
     left: 0;
   }
-  /* .right-panelOnBottom{
-  position: relative;
-  bottom: 0;
-  right: 25px;
-  } */
-  /* .right-panel img {
-    width: 30mm;   
-    height: 20mm;
-    border: 1px solid #ddd;
-    margin-left: 50px;
-  } */
-  /* .form-group {
-    margin-bottom: 10px;
-  } */
-  
+
   .detail-content{
     position: relative;
     margin-top: 60px;
@@ -427,93 +395,7 @@
       margin-left: 58px;
      
     }
-  .position-relative {
-      position: relative;
-    }
-  .form-group input{
-      border-radius: 5px;
-    }
-  .border-error {
-      position: absolute;
-      bottom:-10px;  /* ให้ข้อความอยู่ใต้ input */
-      left: 0px;
-      margin: 2px;
-      background-color: transparent;
-      color: red;
-      font-size: 0.875em;
-      text-align: left;
-      pointer-events: none;
-      border-radius: 5px;
-     z-index: 1;
-    
-    }
-  .box-validate{
-      border: 1px solid red;
-      border-radius: 5px;
-    }
-  .box-validate + .text-validate .border-error {
-      display: block;
-    }
-  .border-errorInDex{
-      position: absolute;
-      bottom:-10px;  /* ให้ข้อความอยู่ใต้ input */
-      left: 0px;
-      margin: 2px;
-      width: 600px;
-      background-color: transparent;
-      color: red;
-      font-size: 0.875em;
-      text-align: left;
-      pointer-events: none;
-      border-radius: 5px;
-     z-index: 1;
-  
-    }
-  .border-errorPersonFullname{
-      position: absolute;
-      bottom:-15px;  /* ให้ข้อความอยู่ใต้ input */
-      left: 0px;
-      margin: 2px;
-      background-color: transparent;
-      color: red;
-      font-size: 0.875em;
-      text-align: left;
-      pointer-events: none;
-      border-radius: 5px;
-    }
-  .border-errorPersonRank{
-      position: absolute;
-      bottom:-10px;  /* ให้ข้อความอยู่ใต้ input */
-      left: 0px;
-      margin: 2px;
-      width: auto;
-      background-color: transparent;
-      color: red;
-      font-size: 0.875em;
-      text-align: left;
-      pointer-events: none;
-      border-radius: 5px;
-    }
-  
-  .border-errorLocation {
-      position: absolute;
-      bottom:-10px;  /* ให้ข้อความอยู่ใต้ input */
-      left: 0px;
-      margin: 2px;
-      /* background-color: white; */
-      color: red;
-      font-size: 0.875em;
-      text-align: left;
-      pointer-events: none;
-      border-radius: 5px;
-     z-index: 1;
-    
-    }
-  .text-validate{
-     
-    color: red;
-  }
-  
+
   
   :host ::ng-deep .close{
     float: right;
