--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -7,6 +7,7 @@
   </a>
 </div>
 <div class="sidebar-wrapper">
+  
   <div *ngIf="isMobileMenu()">
     <form class="navbar-form">
       <span class="bmd-form-group">
@@ -23,15 +24,15 @@
 
     <ul class="nav navbar-nav nav-mobile-menu">
 
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a>
           <i class="material-icons">dashboard</i>
           <p>
             <span class="d-lg-none d-md-block">Stats</span>
           </p>
         </a>
-      </li>
-      <li class="nav-item dropdown">
+      </li> -->
+      <!-- <li class="nav-item dropdown">
         <a
           id="navbarDropdownMenuLink"
           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -50,15 +51,15 @@
           <a class="dropdown-item" href="#">Another Notification</a>
           <a class="dropdown-item" href="#">Another One</a>
         </div>
-      </li>
-      <li class="nav-item">
+      </li> -->
+      <!-- <li class="nav-item">
         <a class="nav-link" href="javascript:void(0)">
           <i class="material-icons">person</i>
           <p>
             <span class="d-lg-none d-md-block">Account</span>
           </p>
         </a>
-      </li>
+      </li> -->
     </ul>
   </div>
   <ul class="nav">
