--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -100,7 +100,7 @@
                 </tbody>
 
               </table>
-            </div>
+            </div>  
           </div>
 
           <!-- การเพิ่มข้อมูล-->
@@ -272,7 +272,7 @@
                     <!-- <form action method="post" [formGroup]="addPersonalForm">
                     </form> -->
 
-                    <div class="form-group">
+                    <!-- <div class="form-group"> -->
                       <label for="detail">รายละเอียด
                         <span
                           *ngIf="addItemForm.controls['detail'].invalid && (addItemForm.controls['detail'].touched || addItemForm.controls['detail'].dirty || Submitted)"
@@ -285,7 +285,7 @@
                         <span class="border-error"
                           *ngIf="addItemForm.controls['detail'].invalid && (addItemForm.controls['detail'].touched || addItemForm.controls['topic'].dirty || Submitted)">กรุณากรอกข้อมูล</span>
                       </div>
-                    </div>
+                    <!-- </div> -->
 
                     <div class="form-group">
                       <label for="place">รายละเอียดสถานที่
